Some visual changes made to my order page

--- a/life_blood_network/homepage/templates/homepage/approval.html
+++ b/life_blood_network/homepage/templates/homepage/approval.html
@@ -4,7 +4,7 @@
 
 {% block body %}
   <div class="row">
-    <div class="col-4 postion-sticky">
+    <div class="col-lg-4 col-sm-12">
       <div id="list-example" class="list-group">
         <a class="list-group-item list-group-item-action" href="#list-item-1">For Approval</a>
         <a class="list-group-item list-group-item-action" href="#list-item-2">Approved</a>
@@ -12,7 +12,7 @@
       </div>
     </div>
 
-    <div class="col-8">
+    <div class="col-lg-4 col-sm-12">
       <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
         <h4 id="list-item-1">For Approval</h4>
           <div class="col my-3" id="for-approval"></div>
