--- a/life_blood_network/homepage/templates/homepage/add_blood.html
+++ b/life_blood_network/homepage/templates/homepage/add_blood.html
@@ -6,7 +6,7 @@
    {{ message }}
   <!-- drop down menus  -->
   <div class="row justify-content-center">
-    <div class="col-4">
+    <div class="col-lg-4 col-sm-12">
       <h1>Add More Stock If Available</h1>
       <form action="{% url 'add_blood_view'%}" method="post">
         {% csrf_token %}
