--- a/life_blood_network/homepage/templates/homepage/layout.html
+++ b/life_blood_network/homepage/templates/homepage/layout.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <link rel="stylesheet" href="{% static 'homepage/layout.css' %}"/>
+  <link rel="stylesheet" href="{% static 'homepage/layout.css' %}" />
   {% block style %}{% endblock %}
 </head>
 
@@ -17,68 +18,69 @@
   <div class="container-xxl">
     <!-- navigation bar or top bar  -->
 
-        <!-- add here anything in between  -->
-        <nav class="navbar navbar-expand-lg bg-white border-white mb-auto">
-          <div class="container-fluid">
-            <a class="navbar-brand " href="{% url 'index_view' %}"><img id="logo-img" src="{% static 'homepage/logo.svg' %}"/> Blood Network</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
+    <!-- add here anything in between  -->
+    <nav class="navbar navbar-expand-lg bg-white border-white mb-auto">
+      <div class="container-fluid">
+        <a class="navbar-brand " href="{% url 'index_view' %}"><img id="logo-img" src="{% static 'homepage/logo.svg' %}" /> Blood Network</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="{% url 'index_view'%}">Home</a>
-                </li>
-              {% if not user.is_authenticated %}
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="{% url 'register_view'%}">Register</a>
-                </li>
+        <div class="collapse navbar-collapse me-auto" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'index_view'%}">Home</a>
+            </li>
+            {% if user.is_authenticated %}
 
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="{% url 'login_view'%}">Login</a>
-                </li>
-              {% endif %}
-              {% if user.is_authenticated %}
+            {% if user.user_type == "reciever"%}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'my_orders_view'%}">My Orders</a>
+            </li>
+            {% endif %}
 
-                {% if user.user_type == "reciever"%}
-                  <li class="nav-item">
-                    <a class="nav-link" href="{% url 'my_orders_view'%}">My Orders</a>
-                  </li>
-                {% endif %}
+            {% if user.user_type == "provider"%}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'add_blood_view'%}">Add Blood-Stock</a>
+            </li>
 
-                {% if user.user_type == "provider"%}
-                  <li class="nav-item">
-                    <a class="nav-link" href="{% url 'add_blood_view'%}">Add Blood-Stock</a>
-                  </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'approval_view'%}">Approvals</a>
+            </li>
+            {% endif %}
 
-                  <li class="nav-item">
-                    <a class="nav-link" href="{% url 'approval_view'%}">Approvals</a>
-                  </li>
-                {% endif %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'my_profile_view' %}">My Profile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'logout_view'%}">Logout</a>
+            </li>
+            {% endif %}
 
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'my_profile_view' %}">My Profile</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'logout_view'%}">Logout</a>
-                </li>
-              {% endif %}
-              </ul>
-            </div>
-          </div>
-        </nav>
+            {% if not user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'register_view'%}">Register</a>
+            </li>
 
-        {% block body %}
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'login_view'%}">Login</a>
+            </li>
+            {% endif %}
+          </ul>
+        </div>
 
-        {% endblock%}
+      </div>
+    </nav>
+
+    {% block body %}
+    {% endblock %}
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-    {% block script%}
-    {% endblock %}
+  {% block script%}
+  {% endblock %}
 </body>
 
 </html>
