--- a/life_blood_network/homepage/templates/homepage/profile.html
+++ b/life_blood_network/homepage/templates/homepage/profile.html
@@ -6,7 +6,7 @@
 
   <!-- drop down menus  -->
   <div class="row justify-content-center align-items-center">
-      <div class="col-4">
+      <div class="col-lg-4 col-sm-6">
         {% if profile_img.url %}
           <img class="img-fluid rounded-pill mb-3" style="width:200px; height: 200px;" src="{{ profile_img.url }}" alt="">
         {% else %}
@@ -14,14 +14,14 @@
         {% endif %}
       </div>
 
-      <div class="col-4 ">
+      <div class="col-lg-4 col-sm-6">
         <H1>Update Profile</H1>
       </div>
 
   </div>
 
   <div class="row justify-content-center">
-    <div class="col-8 ">
+    <div class="col-lg-8 col-sm-12">
       {% if request.user %}
         <p> <strong>Username: </strong>{{ request.user }}</p>
       {% endif %}
