--- a/life_blood_network/homepage/templates/homepage/register.html
+++ b/life_blood_network/homepage/templates/homepage/register.html
@@ -5,7 +5,7 @@
 {% block body %}
 
 <div class="row justify-content-center">
-	<div class="col-8 d-flex justify-content-center">
+	<div class="col-lg-8 col-sm-12 d-flex justify-content-center">
 		<h1 class="">Register Yourself</h1>
 	</div>
 </div>
@@ -20,7 +20,7 @@
 		</div>
 	{% endif %}
 
-	<div class="col-8">
+	<div class="col-lg-8 col-sm-12">
 		<form action="{% url 'register_view' %}" method="post" enctype="multipart/form-data">
 			{% csrf_token %}
 			
