some visual tweaks

--- a/life_blood_network/homepage/templates/homepage/layout.html
+++ b/life_blood_network/homepage/templates/homepage/layout.html
@@ -19,15 +19,15 @@
     <!-- navigation bar or top bar  -->
 
     <!-- add here anything in between  -->
-    <nav class="navbar navbar-expand-lg bg-white border-white mb-auto">
-      <div class="container-fluid">
-        <a class="navbar-brand " href="{% url 'index_view' %}"><img id="logo-img" src="{% static 'homepage/logo.svg' %}" /> Blood Network</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+    <nav class="navbar navbar-expand-lg bg-white border-white">
+      <div class="container-fluid ">
+          <a class="navbar-brand " href="{% url 'index_view' %}"><img id="logo-img" src="{% static 'homepage/logo.svg' %}" /> Blood Network</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-        <div class="collapse navbar-collapse me-auto" id="navbarNav">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{% url 'index_view'%}">Home</a>
