--- a/life_blood_network/homepage/templates/homepage/index.html
+++ b/life_blood_network/homepage/templates/homepage/index.html
@@ -9,7 +9,7 @@
 {% block body %}
 
 <!-- drop down menus  -->
-<div class="row justify-content-center align-items-end" style="height: 10vh;">
+<div class="row justify-content-center align-items-end mt-10">
 
   <div class="col-lg-8  col-sm-12 bg-white">
     <form action="{% url 'search_view' %}">
