some visual changes:

--- a/life_blood_network/homepage/templates/homepage/layout.html
+++ b/life_blood_network/homepage/templates/homepage/layout.html
@@ -19,7 +19,7 @@
     <!-- navigation bar or top bar  -->
 
     <!-- add here anything in between  -->
-    <nav class="navbar navbar-expand-lg bg-white border-white">
+    <nav class="navbar navbar-expand-lg mb-5 bg-white border-white">
       <div class="container-fluid ">
           <a class="navbar-brand " href="{% url 'index_view' %}"><img id="logo-img" src="{% static 'homepage/logo.svg' %}" /> Blood Network</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
