username changing from the prorofile has been deprecated

--- a/life_blood_network/homepage/templates/homepage/profile.html
+++ b/life_blood_network/homepage/templates/homepage/profile.html
@@ -23,7 +23,7 @@
   <div class="row justify-content-center">
     <div class="col-lg-8 col-sm-12">
       {% if request.user %}
-        <p> <strong>Username: </strong>{{ request.user }}</p>
+        <p> <strong>Username:  </strong> <b>{{request.user}}</b> </p>
       {% endif %}
 
       <!-- // profile form -->
