--- a/life_blood_network/homepage/templates/homepage/add_blood.html
+++ b/life_blood_network/homepage/templates/homepage/add_blood.html
@@ -1,6 +1,7 @@
 {% extends 'homepage/layout.html'%}
 
 {% load static %}
+{% block title %} - add blood {% endblock %}
 
 {% block body %}
    {{ message }}
