--- a/life_blood_network/homepage/templates/homepage/approval.html
+++ b/life_blood_network/homepage/templates/homepage/approval.html
@@ -1,6 +1,7 @@
 {% extends 'homepage/layout.html'%}
 
 {% load static %}
+{% block title %} - approval {% endblock %}
 
 {% block body %}
   <div class="row">
