--- a/life_blood_network/homepage/templates/homepage/index.html
+++ b/life_blood_network/homepage/templates/homepage/index.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title%}Blood Network{% endblock %}
+{% block title%}- homepage {% endblock %}
 
 {% block style %}<link rel="stylesheet" href="{% static 'homepage/style.css' %}" />{% endblock %}
 
