--- a/life_blood_network/homepage/templates/homepage/register.html
+++ b/life_blood_network/homepage/templates/homepage/register.html
@@ -2,6 +2,7 @@
 
 {% load static %}
 
+{% block title %} - Register {% endblock %}
 {% block body %}
 
 <div class="row justify-content-center">
@@ -85,7 +86,7 @@
 				</select>
 			</div> -->
 			<div class="d-flex justify-content-center">
-				<button type="submit" class="btn btn-primary">Register</button>
+				<button type="submit" class="btn btn-danger">Register</button>
 			</div>
 		</form>
 	</div>
