--- a/life_blood_network/homepage/templates/homepage/layout.html
+++ b/life_blood_network/homepage/templates/homepage/layout.html
@@ -5,11 +5,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% block title %} layout {% endblock %}</title>
+  <title>Blood-Network{% block title %}{% endblock %}</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="{% static 'homepage/layout.css' %}" />
+  <script src="https://kit.fontawesome.com/e183061512.js" crossorigin="anonymous"></script>
   {% block style %}{% endblock %}
 </head>
 
@@ -21,11 +21,12 @@
     <!-- add here anything in between  -->
     <nav class="navbar navbar-expand-lg mb-5 bg-white border-white">
       <div class="container-fluid ">
-          <a class="navbar-brand " href="{% url 'index_view' %}"><img id="logo-img" src="{% static 'homepage/logo.svg' %}" /> Blood Network</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+        <a class="navbar-brand " href="{% url 'index_view' %}"><img id="logo-img"
+            src="{% static 'homepage/logo.svg' %}" /> Blood Network</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
@@ -76,6 +77,36 @@
     {% block body %}
     {% endblock %}
   </div>
+  <!-- footer  -->
+  <footer class="text-center bg-body-teriary mt-5 ">
+    <!-- Grid container -->
+    <div class="container pt-4 ">
+      <!-- Section: Social media -->
+      <section>
+
+        <!-- Google -->
+        <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="mailto:aarav7397@gmail.com" target="_blank" role="button"
+          data-mdb-ripple-color="dark"><i class="fab fa-google"></i></a>
+
+        <!-- Linkedin -->
+        <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" target="_blank" href="https://linkedin.com/in/kumaraarav/" role="button"
+          data-mdb-ripple-color="dark"><i class="fab fa-linkedin"></i></a>
+        <!-- Github -->
+        <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" target="_blank" href="https://github.com/darkice000/" role="button"
+          data-mdb-ripple-color="dark"><i class="fab fa-github"></i></a>
+      </section>
+      <!-- Section: Social media -->
+    </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div class="text-center p-3">
+      Made With <i class="fa-solid fa-heart" style="color: #e00000;"></i> by 
+      <a class="text-body" href="https://kumaraarav.pythonaywhere.com"><strong>aarav.dev</strong></a>
+    </div>
+    <!-- Copyright -->
+  </footer>
+  <!-- footer end  -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
